# wd-tagger-cpp-sample

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh
src/: wdtagger.cpp
